syntax = "proto3";

option go_package = "project01/proto/basic";

message UserContent {
  uint32 user_content_id  = 1 [json_name = "user_content_id"];
  string slug = 2;
  string title = 3;
  string html_content = 4 [json_name = "html_content"];
  uint32 author_id = 5 [json_name = "author_id"];
  // version 2
  // string category = 6;

  // version 3
  // reserved 3, 5;
  //string sub_category = 7 [json_name = "sub_category"];
}